feat footer & contacts

--- a/src/ui/_input.html
+++ b/src/ui/_input.html
@@ -1,11 +1,21 @@
 <div class="input">
-  <input
-    data-validate
-    data-required
-    autocomplete="off"
-    type="text"
-    name="form[]"
-    placeholder="ФИО"
-    class="input__field" />
-  <span class="input__hint txt txt_14">Введите текстовое значение</span>
+    <input
+        data-validate
+        data-required
+        autocomplete="off"
+        type="text"
+        name="form[]"
+        placeholder="ФИО"
+        class="input__field"
+    />
+    <span class="input__hint txt txt_14">Введите текстовое значение</span>
+</div>
+
+<div class="textarea">
+    <textarea
+        name="form[]"
+        autocomplete="off"
+        placeholder="Ваше сообщение"
+        class="input__textarea"
+    ></textarea>
 </div>
