--- a/src/home.html
+++ b/src/home.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Главная</title>
-  </head>
-  <body>
-    <div class="wrapper home-page">
-      <include src="./components/header.html"></include>
-      <main></main>
-      <include src="./components/footer.html"></include>
-      <include src="./components/modals.html"></include>
-      <include src="./components/svg.html"></include>
-    </div>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <script src="https://api-maps.yandex.ru/v3/?apikey=24d298f1-151c-4481-9e4a-235c4db16ee9&lang=ru_RU"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+        <title>Главная</title>
+    </head>
+    <body>
+        <div class="wrapper home-page">
+            <include src="./components/header.html"></include>
+            <main>
+                <include src="./components/contact.html"></include>
+            </main>
+            <include src="./components/footer.html"></include>
+            <include src="./components/modals.html"></include>
+            <include src="./components/svg.html"></include>
+        </div>
+    </body>
 </html>
