feat footer & contacts

--- a/src/home.html
+++ b/src/home.html
@@ -2,7 +2,8 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script src="https://api-maps.yandex.ru/v3/?apikey=24d298f1-151c-4481-9e4a-235c4db16ee9&lang=ru_RU"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
         <title>Главная</title>
     </head>
     <body>
@@ -10,6 +11,7 @@
             <include src="./components/header.html"></include>
             <main>
                 <include src="./components/_hero.html"></include>
+                <include src="./components/contact.html"></include>
             </main>
             <include src="./components/footer.html"></include>
             <include src="./components/modals.html"></include>
