--- a/src/home.html
+++ b/src/home.html
@@ -8,8 +8,9 @@
     <body>
         <div class="wrapper home-page">
             <include src="./components/header.html"></include>
-            <main>
+            <main class="_scroll-trigger">
                 <include src="./components/_hero.html"></include>
+                <include src="./components/_choose.html"></include>
             </main>
             <include src="./components/footer.html"></include>
             <include src="./components/modals.html"></include>
