--- a/src/home.html
+++ b/src/home.html
@@ -12,7 +12,7 @@
             <main class="_scroll-trigger">
                 <include src="./components/_hero.html"></include>
                 <include src="./components/_choose.html"></include>
-                <include src="./components/contact.html"></include>
+                <include src="./components/_contact.html"></include>
             </main>
             <include src="./components/footer.html"></include>
             <include src="./components/modals.html"></include>
