--- a/src/home.html
+++ b/src/home.html
@@ -12,6 +12,8 @@
             <main class="_scroll-trigger">
                 <include src="./components/_hero.html"></include>
                 <include src="./components/_choose.html"></include>
+                <include src="./components/_author.html"></include>
+                <include src="./components/_condition.html"></include>
                 <include src="./components/_contact.html"></include>
             </main>
             <include src="./components/footer.html"></include>
