add: banner section

--- a/src/home.html
+++ b/src/home.html
@@ -12,6 +12,7 @@
             <main class="_smooth-scroll">
                 <include src="./components/_hero.html"></include>
                 <include src="./components/_choose.html"></include>
+                <include src="./components/_banner.html"></include>
                 <include src="./components/_author.html"></include>
                 <include src="./components/_condition.html"></include>
                 <include src="./components/_contact.html"></include>
