update: advantages section

--- a/src/home.html
+++ b/src/home.html
@@ -2,6 +2,7 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8" />
+        <script src="http://code.jquery.com/jquery-latest.min.js"></script>
         <script src="https://api-maps.yandex.ru/v3/?apikey=24d298f1-151c-4481-9e4a-235c4db16ee9&lang=ru_RU"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
         <title>Главная</title>
@@ -13,6 +14,7 @@
                 <include src="./components/_hero.html"></include>
                 <include src="./components/_choose.html"></include>
                 <include src="./components/_banner.html"></include>
+                <include src="./components/_advantages.html"></include>
                 <include src="./components/_author.html"></include>
                 <include src="./components/_condition.html"></include>
                 <include src="./components/_contact.html"></include>
