--- a/src/home.html
+++ b/src/home.html
@@ -15,6 +15,7 @@
                 <include src="./components/_banner.html"></include>
                 <include src="./components/_author.html"></include>
                 <include src="./components/_condition.html"></include>
+                <include src="./components/_routes.html"></include>
                 <include src="./components/_contact.html"></include>
             </main>
             <include src="./components/footer.html"></include>
