--- a/src/home.html
+++ b/src/home.html
@@ -19,6 +19,7 @@
         <include src="./components/_condition.html"></include>
         <include src="./components/_contact.html"></include>
     </main>
+    <include src="./components/loader.html"></include>
     <include src="./components/footer.html"></include>
     <include src="./components/modals.html"></include>
     <include src="./components/svg.html"></include>
