feat: contacts mobile version

--- a/src/home.html
+++ b/src/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
     <head>
         <meta charset="UTF-8" />
@@ -16,9 +16,9 @@
                 <include src="./components/_banner.html"></include>
                 <include src="./components/_advantages.html"></include>
                 <include src="./components/_author.html"></include>
-<!--                <include src="./components/_condition.html"></include>-->
-<!--                <include src="./components/_routes.html"></include>-->
-<!--                <include src="./components/_contact.html"></include>-->
+                <!--                <include src="./components/_condition.html"></include>-->
+                <!--                <include src="./components/_routes.html"></include>-->
+                <include src="./components/_contact.html"></include>
             </main>
             <include src="./components/footer.html"></include>
             <include src="./components/modals.html"></include>
