feat: conmdition mobile version

--- a/src/home.html
+++ b/src/home.html
@@ -16,7 +16,7 @@
                 <include src="./components/_banner.html"></include>
                 <include src="./components/_advantages.html"></include>
                 <include src="./components/_author.html"></include>
-                <!--                <include src="./components/_condition.html"></include>-->
+                <include src="./components/_condition.html"></include>
                 <!--                <include src="./components/_routes.html"></include>-->
                 <include src="./components/_contact.html"></include>
             </main>
