--- a/src/home.html
+++ b/src/home.html
@@ -17,7 +17,7 @@
                 <include src="./components/_advantages.html"></include>
                 <include src="./components/_author.html"></include>
                 <include src="./components/_condition.html"></include>
-                <!--                <include src="./components/_routes.html"></include>-->
+                <include src="./components/_routes.html"></include>
                 <include src="./components/_contact.html"></include>
             </main>
             <include src="./components/footer.html"></include>
