fix: footer cut off

--- a/src/home.html
+++ b/src/home.html
@@ -8,9 +8,9 @@
         <title>Главная</title>
     </head>
     <body>
-        <div class="wrapper home-page">
+        <div class="wrapper home-page _smooth-scroll">
             <include src="./components/header.html"></include>
-            <main class="_smooth-scroll">
+            <main class="">
                 <include src="./components/_hero.html"></include>
                 <include src="./components/_choose.html"></include>
                 <div class="three-scroll">
