add: hamburger menu

--- a/src/home.html
+++ b/src/home.html
@@ -20,6 +20,7 @@
                     <include src="./components/_condition.html"></include>
                     <div class="three-scroll__spacer _desktop-only"></div>
                 </div>
+                <include src="./components/_routes.html"></include>
                 <include src="./components/_contact.html"></include>
             </main>
             <include src="./components/loader.html"></include>
