--- a/src/home.html
+++ b/src/home.html
@@ -10,7 +10,7 @@
     <body>
         <div class="wrapper home-page _smooth-scroll">
             <include src="./components/header.html"></include>
-            <main class="">
+            <main>
                 <include src="./components/_hero.html"></include>
                 <include src="./components/_choose.html"></include>
                 <div class="three-scroll">
