feat: news page

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,9 @@
                 <li>
                     <a target="_blank" href="./home.html">главная</a>
                 </li>
+                <li>
+                    <a target="_blank" href="./news.html">Новости/Акции</a>
+                </li>
             </ol>
         </div>
         <style>
