feat: promotion page

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
                 <li>
                     <a target="_blank" href="./news.html">Новости/Акции</a>
                 </li>
+                <li>
+                    <a target="_blank" href="./news-detailed.html">Детальная акции</a>
+                </li>
             </ol>
         </div>
         <style>
