--- a/src/ui/_input.html
+++ b/src/ui/_input.html
@@ -8,14 +8,17 @@
         placeholder="ФИО"
         class="input__field"
     />
-    <span class="input__hint txt txt_14">Введите текстовое значение</span>
+    <span class="input__hint txt txt_14">Заполните поле</span>
 </div>
 
-<div class="textarea">
+<div class="input textarea">
     <textarea
+        data-validate
+        data-required
         name="form[]"
         autocomplete="off"
         placeholder="Ваше сообщение"
         class="input__textarea"
     ></textarea>
+    <span class="input__hint txt txt_14">Заполните поле</span>
 </div>
