feat: rental page

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
                 <li>
                     <a target="_blank" href="./news-detailed.html">Детальная акции</a>
                 </li>
+                <li>
+                    <a target="_blank" href="./rental-conditions.html">Условия проката</a>
+                </li>
             </ol>
         </div>
         <style>
