--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,16 @@
             <ol>
                 <li>
                     <a target="_blank" href="./home.html">главная</a>
+                    
+                </li>
+                <li> 
+                    <a target="_blank" href="./error404.html">404</a>
+                </li>
+                <li> 
+                    <a target="_blank" href="./policy-processing.html">Политика обработки персональных данных</a>
+                </li>
+                <li> 
+                    <a target="_blank" href="./terms-use.html">Пользовательское соглашение</a>
                 </li>
             </ol>
         </div>
