--- a/src/news-detailed.html
+++ b/src/news-detailed.html
@@ -7,16 +7,15 @@
         <title>Детальная Акции</title>
     </head>
     <body>
-        <div class="wrapper article-page">
+        <div class="wrapper article-page _smooth-scroll">
             <include src="./components/header.html"></include>
 
-            <main class="_smooth-scroll">
+            <main>
                 <include src="./components/_promotion.html"></include>
                 <include src="./components/_popular-promotions.html"></include>
                 <include src="./components/_contact.html"></include>
             </main>
 
-            <include src="./components/loader.html"></include>
             <include src="./components/footer.html"></include>
             <include src="./components/modals.html"></include>
             <include src="./components/svg.html"></include>
