--- a/src/news.html
+++ b/src/news.html
@@ -6,12 +6,11 @@
         <title>Акции/Новости</title>
     </head>
     <body>
-        <div class="wrapper news-page">
+        <div class="wrapper news-page _smooth-scroll">
             <include src="./components/header.html"></include>
-            <main class="_smooth-scroll">
-              <include src="./components/_news.html"></include>
+            <main>
+                <include src="./components/_news.html"></include>
             </main>
-            <include src="./components/loader.html"></include>
             <include src="./components/footer.html"></include>
             <include src="./components/modals.html"></include>
             <include src="./components/svg.html"></include>
