--- a/src/rental-conditions.html
+++ b/src/rental-conditions.html
@@ -7,15 +7,13 @@
         <title>Условия проката</title>
     </head>
     <body>
-        <div class="wrapper rental-page">
+        <div class="wrapper rental-page _smooth-scroll">
             <include src="./components/header.html"></include>
 
-            <main class="_smooth-scroll">
+            <main>
                 <include src="./components/_rental.html"></include>
                 <include src="./components/_contact-rental.html"></include>
             </main>
-
-            <include src="./components/loader.html"></include>
             <include src="./components/footer.html"></include>
             <include src="./components/modals.html"></include>
             <include src="./components/svg.html"></include>
