--- a/src/error404.html
+++ b/src/error404.html
@@ -4,31 +4,30 @@
         <meta charset="UTF-8" />
         <script src="https://api-maps.yandex.ru/v3/?apikey=24d298f1-151c-4481-9e4a-235c4db16ee9&lang=ru_RU"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-        <title>Главная</title>
+        <title>404</title>
     </head>
     <body>
-        <div class="wrapper  _smooth-scroll">
+        <div class="wrapper _smooth-scroll">
             <include src="./components/header.html"></include>
             <main>
                 <section class="error404">
                     <div class="error404__image">
-                        <img class="error404__image-desk" src="./assets/images/error404/404error.png" alt="">
-                        <img class="error404__image-mob" src="./assets/images/error404/mobbg.png" alt="">
+                        <img
+                            class="error404__image-desk"
+                            src="./assets/images/error404/404error.png"
+                            alt=""
+                        />
+                        <img class="error404__image-mob" src="./assets/images/error404/mobbg.png" alt="" />
                     </div>
                     <div class="container">
                         <div class="error404__wrapper">
                             <div class="error404__content">
-                                <div class="error404__title h h_1">
-                                    404
-                                </div>
-                                <div class="error404__text">
-                                    К сожалению, такой страницы не существует
-                                </div>
+                                <div class="error404__title h h_1">404</div>
+                                <div class="error404__text">К сожалению, такой страницы не существует</div>
                                 <a href="#" class="error404__btn btn">
                                     <span class="btn__txt">Вернуться на главную</span>
                                 </a>
                             </div>
-                           
                         </div>
                     </div>
                 </section>
